# FlameDetection

./: FlameDetection.py  README.md
CONSTANTS/: CONSTANTS.py
Cuda_Version/: CMakeCache.txt  CMakeLists.txt  FlameDetection  FlameDetection.cpp  Makefile  cmake_install.cmake  normal.mkv
Data/: flame.mkv
Python_Version/: FlameDetection.py
